<resources>
    <string name="app_name">VirtualPlanner</string>

    <!-- Strings used for multiple screens -->
    <string name="empty_string"></string>
    <string name="save">Save</string>

    <!-- Strings used for toasts -->
    <string name="toast_reminder_added">Reminder is added to list</string>

    <!-- Strings used for home screen -->
    <string name="home_screen_button_login">Login</string>
    <string name="home_screen_button_register">Register</string>

    <!-- Strings used for login screen -->
    <string name="login_screen_main_text">Login</string>
    <string name="login_screen_username_hint">Username</string>
    <string name="login_screen_password_hint">Password</string>
    <string name="login_screen_bottom_text">Don\'t have an account?</string>
    <string name="login_screen_bottom_link">Sing Up</string>
    <string name="login_screen_button_text">Sing In</string>
    <string name="login_screen_error">Username or password invalid</string>

    <!-- Strings used for register screen -->
    <string name="register_screen_main_text">Register</string>
    <string name="register_screen_repeat_password_hint">Repeat password</string>
    <string name="register_screen_bottom_text">Already have an account?</string>
    <string name="register_screen_bottom_link">Sing In</string>
    <string name="register_screen_button_text">Sing Up</string>
    <string name="register_screen_username_cannot_be_empty_message">This field cannot be empty</string>
    <string name="register_screen_username_already_exists_message">This username already exists</string>
    <string name="register_screen_username_error_message">Username should have between 3 and 20 characters, can contain letters, numbers and _</string>
    <string name="register_screen_complexity_error_message">Minimum eight characters, at least one uppercase, one lowercase letter and one number</string>
    <string name="register_screen_matching_error_message">Passwords must match!</string>

    <!-- Strings used for fragments for navigation -->
    <string name="navigation_home_button">Home</string>
    <string name="navigation_calendar_button">Calendar</string>
    <string name="navigation_todo_button">To do list</string>
    <string name="navigation_notes_button">Notes</string>

    <!-- Strings used for drop-down menu -->
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Log out</string>

    <!-- Strings used for notes fragment -->
    <string name="notes_you_dont_have_notes">You do not have any notes yet</string>
    <string name="notes_add_note">Add note</string>
    <string name="note_popup_add_note">Add new note</string>
    <string name="note_popup_hint">Enter notes title</string>
    <string name="note_popup_text_hint">Enter notes content</string>


    <!-- Strings used for to do fragment -->
    <string name="todo_no_tasks">No reminders</string>
    <string name="todo_popup_add_tasks">Add new reminder</string>
    <string name="todo_popup_hint">Enter reminder</string>



</resources>