<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/popupAddTodoId"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:padding="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/popupTodoTitleId"
                android:text="@string/todo_popup_add_tasks"
                android:layout_centerHorizontal="true"
                android:textSize="20dp"
                android:textStyle="italic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/popupTodoItemId"
                android:layout_marginTop="30dp"
                android:textColorHighlight="@color/button_main"
                android:layout_below="@id/popupTodoTitleId"
                android:hint="@string/todo_popup_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/popupTodoSaveButtonId"
                android:layout_marginTop="20dp"
                android:text="@string/save"
                android:textColor="@color/text_main"
                android:backgroundTint="@color/background_main"
                android:layout_below="@id/popupTodoItemId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>